[gd_scene load_steps=41 format=2]

[ext_resource path="res://entities/NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/characters.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/death.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
custom_solver_bias = 1.0
radius = 18.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_e"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_n"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle_s"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_w"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk_e"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk_n"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_s"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk_w"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "idle_w"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "idle_e"

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "idle_s"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "idle_n"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 37 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "walk_w"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "walk_e"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "walk_s"

[sub_resource type="AnimationNodeAnimation" id=41]
animation = "walk_n"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 38 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 39 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 40 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 41 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 298, 51 )
states/walk/node = SubResource( 22 )
states/walk/position = Vector2( 470, 51 )
transitions = [ "idle", "walk", SubResource( 23 ), "walk", "idle", SubResource( 24 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=54]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="NPC" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 513
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 16
vframes = 27
region_enabled = true
region_rect = Rect2( 0, 64, 1024, 1728 )

[node name="RayCastCenter" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 13

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = 0.174533
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 13

[node name="RayCastLeft2" type="RayCast2D" parent="."]
rotation = 0.349066
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 13

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = -0.174533
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 13

[node name="RayCastRight2" type="RayCast2D" parent="."]
rotation = -0.349066
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 13

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 10.0
max_speed = 50.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_e"
anims/RESET = SubResource( 2 )
anims/idle_e = SubResource( 3 )
anims/idle_n = SubResource( 4 )
anims/idle_s = SubResource( 5 )
anims/idle_w = SubResource( 6 )
anims/walk_e = SubResource( 8 )
anims/walk_n = SubResource( 9 )
anims/walk_s = SubResource( 7 )
anims/walk_w = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/idle/blend_position = Vector2( -0.233553, 0.554286 )
parameters/walk/blend_position = Vector2( -0.00164473, 0.965714 )

[node name="DeathSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 54 )
